--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">SmartHome</string>
-    <string name="title_home">Inicio</string>
-    <string name="title_dashboard">Panel</string>
+    <string name="title_rooms">Habitaciones</string>
+    <string name="title_routines">Rutinas</string>
     <string name="title_notifications">Notificaciones</string>
     <string name="Search">Búsqueda</string>
     <string name="Settings">Configuraciones</string>
