--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">SmartHome</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_rooms">Rooms</string>
+    <string name="title_routines">Routines</string>
     <string name="title_notifications">Notifications</string>
     <string name="Search">Search</string>
     <string name="Settings">Settings</string>
