--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">SmartHome</string>
     <string name="title_rooms">Rooms</string>
     <string name="title_routines">Routines</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_cameras">Cameras</string>
     <string name="Search">Search</string>
     <string name="Settings">Settings</string>
     <string name="About">About</string>
