--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_name">SmartHome</string>
     <string name="title_rooms">Habitaciones</string>
     <string name="title_routines">Rutinas</string>
+    <string name="apply_routine">Rutina aplicada!</string>
     <string name="title_cameras">Cameras</string>
     <string name="Search">Búsqueda</string>
     <string name="Settings">Configuraciones</string>
