--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -4,12 +4,14 @@
     <string name="title_rooms">Habitaciones</string>
     <string name="title_routines">Rutinas</string>
     <string name="apply_routine">Rutina aplicada!</string>
-    <string name="title_cameras">Cameras</string>
+    <string name="title_cameras">Camaras</string>
     <string name="Search">Búsqueda</string>
     <string name="Settings">Configuraciones</string>
     <string name="About">Sobre</string>
     <string name="Blinds">Persianas</string>
     <string name="UpDown">Arriba/Abajo</string>
+    <string name="ColumnsAmount">Cantidad de columnas</string>
+    <string name="title_activity_settings">Ajustes</string>
 
 
 
