--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -7,7 +7,7 @@
     <string name="title_cameras">Camaras</string>
     <string name="Search">Búsqueda</string>
     <string name="Settings">Configuraciones</string>
-    <string name="About">Sobre</string>
+    <string name="About">Acerca de</string>
     <string name="Blinds">Persianas</string>
     <string name="UpDown">Arriba/Abajo</string>
     <string name="ColumnsAmount">Cantidad de columnas</string>
