Cambiar columnas en settings

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -7,11 +7,12 @@
     <string name="title_cameras">Camaras</string>
     <string name="Search">Búsqueda</string>
     <string name="Settings">Configuraciones</string>
-    <string name="About">Acerca de</string>
+    <string name="About">Sobre</string>
     <string name="Blinds">Persianas</string>
     <string name="UpDown">Arriba/Abajo</string>
     <string name="ColumnsAmount">Cantidad de columnas</string>
     <string name="title_activity_settings">Ajustes</string>
+    <string name="pref_dark_theme">Tema oscuro</string>
 
 
 
