--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="UpDown">Up/Down</string>
     <string name="ColumnsAmount">Columns amount</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="pref_dark_theme">Dark theme</string>
 
     <!-- Strings related to Settings -->
 
