--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,14 @@
     <string name="Settings">Settings</string>
     <string name="About">About</string>
 
+    <string name="ActionFail">Error, could not apply the change!</string>
+
     <string name="Blinds">Blinds</string>
     <string name="UpDown">Up/Down</string>
     <string name="Up">Up</string>
     <string name="Down">Down</string>
+    <string name="SuccessBlindsDown">Success! Blind is now Down.</string>
+    <string name="SuccessBlindsUp">Success! Blind is now Up.</string>
 
     <string name="Ac">Air Conditioner</string>
     <string name="OnOff" translatable="false">On/Off</string>
@@ -26,6 +30,9 @@
     <string name="Heat">Heat</string>
     <string name="Fan">Fan</string>
 
+    <string name="SuccessMsgOnOff">Success! Device is now </string>
+    <string name="OnM">On</string>
+    <string name="OffM">Off</string>
 
     <string name="Door">Door</string>
     <string name="OpenClose">Open/Close</string>
