--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,13 +70,22 @@
 
 
     <string name="Refrigerator">Refrigerator</string>
+    <string name="FreezerTemperature">Freezer Temperature</string>
+    <string name="Party">Party</string>
+    <string name="Vacations">Vacations</string>
+    <string name="SuccessFMode">Success! Fridge Mode has successfully changed.</string>
 
     <string name="Timer">Timer</string>
+    <string name="enterMinutes">Minutes!</string>
+    <string name="Start">Start</string>
+    <string name="Stop">Stop</string>
+    <string name="timer" translatable="false">00:00:00</string>
+    <string name="Set">Set</string>
+    <string name="TimerFinished">Timer Finished!</string>
+    <string name="SetDone">Success! The time has changed.</string>
 
     <string name="Alarm">Alarm</string>
 
-
-    <string name="devState"></string>
     <string name="ColumnsAmountPotrait">Columns amount (Potrait mode)</string>
     <string name="ColumnsAmountLandscape">Columns amount (Landscape mode)</string>
     <string name="title_activity_settings">Settings</string>
@@ -149,6 +158,12 @@
         <item>@string/Cool</item>
         <item>@string/Heat</item>
         <item>@string/Fan</item>
+    </string-array>
+
+    <string-array name="FridgeMode">
+        <item>@string/Normal</item>
+        <item>@string/Party</item>
+        <item>@string/Vacations</item>
     </string-array>
 
 
