--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,6 +130,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_favourites">Favourites</string>
     <string name="title_device">Device</string>
+    <string name="title_activity_device">Device activity</string>
     <string-array name="VSwing">
         <item>auto</item>
         <item>22</item>
