--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,7 +150,19 @@
         <item>@string/Heat</item>
         <item>@string/Fan</item>
     </string-array>
-    <string name="error_request">Error getting the JSON Request</string>
 
+    <string-array name="ArrayInterval">
+        <item>@string/Short</item>
+        <item>@string/Medium</item>
+        <item>@string/Long</item>
+    </string-array>
+
+    <string name="Short" >1 min</string>
+    <string name="Medium">30 min</string>
+    <string name="Long">60 min</string>
+    <string name="Interval">Notification Interval (Restart Required)</string>
+
+    <string name="error_request">Error getting the JSON Request</string>
+    <string name="activate_dev_not">Activate Device Notifications</string>
 
 </resources>
