--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -182,5 +182,6 @@
         <item>@string/Vacations</item>
     </string-array>
 
+    <string name="ChangeMessage">A device has been changed!</string>
 
 </resources>
