--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,8 +127,6 @@
         <item>@string/Top</item>
     </string-array>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_favourites">Favourites</string>
     <string name="title_device">Device screen</string>
     <string name="title_activity_device">Device activity</string>
@@ -186,6 +184,10 @@
     <string name="ChangeMessage">A device has been changed!</string>
     <string name="empty_room">This room is empty!</string>
     <string name="no_rooms_available">There are no rooms yet!</string>
+    <string name="no_rooms_error">The rooms could not be loaded because there are some connection issues, check your connection and try again.</string>
     <string name="no_favorites_available">There are no favourites device, access a device to add one to your favourites!</string>
+    <string name="connection_error">There are some connection issues, check your connection and swipe down to refresh.</string>
+    <string name="apply_routine_error">The routine could not be applied because there are some connection issues, check your connection and try again.</string>
+    <string name="no_routines_error">The routines could not be loaded because there are some connection issues, check your connection and try again.</string>
 
 </resources>
